0.1.2 ()
=====
* Changed types to match new ocaml-ogg's API.
  Should be fully backward compatible.
* Fix segfault when vendor string is empty.

0.1.1 (25-06-2012)
=====
* Fixed incorrect decoding of 24bit flac streams.
  Thanks to Wittawas Nakkasem for reporting and patching!

0.1.0 (04-07-2011)
======
* Initial release