@@ -55,6 +55,10 @@ AC_SUBST(OCAMLOGG_LIBS)
 AC_SUBST(OCAMLOGG_META)
 AC_SUBST(OCAMLOGG_REQUIRES)
 
+# Bytes.
+AC_CHECK_OCAML_BINDING([bytes],[],[],[1])
+INC="$INC `$OCAMLFIND query bytes`"
+
 # substitutions to perform
 AC_SUBST(VERSION)
 AC_SUBST(INC)
